# ai-act-companion

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  README.md  SECURITY.md  THREAT_MODEL.md  action.yml  mcp_server.py  pyproject.toml  requirements.txt  serve-local.ps1
.claude-plugin/: marketplace.json  plugin.json
.github/: copilot-instructions.md
.github/prompts/: ai-act-assessment.prompt.md
.github/workflows/: ci.yml  copilot-setup-steps.yml
app/: __init__.py  classifier.py  cli.py  controls.py  data_security.py  incident.py  main.py  modelcard.py  models.py  questionnaire.py  redteam.py  reports.py  scan.py  security.py  storage.py  stride.py
app/knowledge/: __init__.py  ai_security.py  controls.py  data_security.py  eu_ai_act.py  iso_42001.py  monitoring.py  nist_rmf.py  red_team.py  security_frameworks.py  stride.py
app/llm/: __init__.py  base.py  config.py  manual.py  ollama.py  prompts.py  service.py
data/: .gitkeep
docs/: COPILOT.md  DEMO-SCRIPT.md  DEPLOY-HF-SPACE.md
docs/examples/: README.md  foundation-model-datasec.md  foundation-model-modelcard.md  foundation-model-risk.md  grid-ops-agent-controls.md  grid-ops-agent-redteam.md  grid-ops-agent-risk.md  grid-ops-agent-security.md  grid-ops-agent-stride.md  hiring-cv-screening-compliance.md  social-scoring-risk.md  (+7 more)
examples/: foundation_model.json  golden_set.json  grid_ops_agent.json  hiring_cv_screening.json  social_scoring.json  spam_filter.json  support_chatbot.json
scripts/: build_gallery.py  capture_demo.py
static/: app.js  index.html  print.css  style.css
tests/: test_accuracy.py  test_api.py  test_classifier.py  test_control_catalog.py  test_data_security.py  test_incident.py  test_iso_42001.py  test_modelcard.py  test_red_team.py  test_redteam_plan.py  test_scan.py  test_security.py  test_stride.py
(+2 files in other folders)
