[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-act-companion"
version = "0.1.0"
description = "Local, rule-based EU AI Act risk classifier with an AI security lens (NIST AI RMF, OWASP LLM Top 10, MITRE ATLAS) and document generation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jesse van de Kasteele" }]
keywords = [
    "eu-ai-act", "ai-governance", "nist-ai-rmf", "responsible-ai",
    "ai-compliance", "ai-risk-assessment", "dpia", "ai-security",
    "owasp-llm", "mitre-atlas", "fastapi",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",  # only used by the optional Ollama provider
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.8", "bandit>=1.7", "pip-audit>=2.7"]
mcp = ["mcp>=1.2"]  # Claude Code / MCP server (mcp_server.py)

[project.scripts]
ai-act = "app.cli:main"

# TODO: replace USERNAME with your GitHub handle once the repo is created.
[project.urls]
Homepage = "https://github.com/USERNAME/ai-act-companion"
Repository = "https://github.com/USERNAME/ai-act-companion"

[tool.setuptools]
packages = ["app", "app.knowledge", "app.llm"]
py-modules = ["mcp_server"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # line length handled pragmatically

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
